# spdlog

./: CMakeLists.txt  main.cpp
